--- a/less/creative.less
+++ b/less/creative.less
@@ -215,7 +215,7 @@ header {
     margin-top: 0;
 }
 
-.service-box {
+.partners-box {
     max-width: 400px;
     margin: 50px auto 0;
     @media (min-width: 992px) {
