--- a/less/creative.less
+++ b/less/creative.less
@@ -190,6 +190,8 @@ header {
         .header-content {
             position: absolute;
             top: 50%;
+            -webkit-transform: translateY(-50%);
+            -ms-transform: translateY(-50%);
             transform: translateY(-50%);
             padding: 0 50px;
             .header-content-inner {
@@ -213,7 +215,7 @@ header {
     margin-top: 0;
 }
 
-.service-box {
+.partners-box {
     max-width: 400px;
     margin: 50px auto 0;
     @media (min-width: 992px) {
