--- a/less/creative.less
+++ b/less/creative.less
@@ -167,6 +167,7 @@ header {
         text-align: center;
         padding: 100px 15px 100px;
         width: 100%;
+        overflow: auto;
         .header-content-inner {
             h1 {
                 font-weight: 700;
