Adding Jims changes to less
Signed-off-by: Ian Allison <iana@pims.math.ca>

--- a/less/creative.less
+++ b/less/creative.less
@@ -27,7 +27,7 @@ a {
     color: @theme-primary;
     &:hover,
     &:focus {
-        color: darken(@theme-primary, 10%);
+        color: @theme-focus;
     }
 }
 
@@ -85,7 +85,7 @@ aside {
         text-transform: uppercase;
         &:hover,
         &:focus {
-            color: darken(@theme-primary, 10%);
+            color: @theme-focus;
         }
     }
     .nav {
@@ -137,7 +137,7 @@ aside {
                 font-size: 14px;
                 &:hover,
                 &:focus {
-                    color: darken(@theme-primary, 10%);
+                    color: @theme-focus;
                 }
             }
             .nav > li > a,
@@ -159,7 +159,7 @@ header {
     min-height: auto;
     .background-cover;
     background-position: center;
-    background-image: url('../img/header.jpg');
+    background-image: url('../img/map_clusters_hi_caption.jpg');
     text-align: center;
     color: white;
     .header-content {
@@ -218,12 +218,29 @@ header {
 
 .partners-box {
     max-width: 400px;
+    text-align: center;
     margin: 50px auto 0;
     @media (min-width: 992px) {
         margin: 20px auto 0;
     }
     p {
         margin-bottom: 0;
+    }
+    img {
+        height: 200px;
+    }
+
+}
+
+.funding-box {
+    margin: 50px auto 0;
+    text-align: center;
+    max-width: 400px;
+    p {
+        margin-bottom: 0;
+    }
+    img {
+        width: 300px;
     }
 }
 
@@ -236,7 +253,7 @@ header {
         color: white;
         opacity: 0;
         display: block;
-        background: fade(@theme-primary, 90%);
+        background: rgba(240, 95, 64, .9);
         position: absolute;
         bottom: 0;
         text-align: center;
