--- a/less/mixins.less
+++ b/less/mixins.less
@@ -26,8 +26,8 @@
 	&.active,
 	.open > .dropdown-toggle& {
 		color: @color;
-		background-color: darken(@background, 5%);
-	    border-color: darken(@border, 7%);
+		background-color: #911e7d;
+	    border-color: #881c75;
 	}
 	&:active,
 	&.active,
