--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,8 +2,7 @@
 layout: default
 ---
 
-<!-- Page Header -->
-<header class="intro-header" style="background-image: url('{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}')">
+<header> 
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -16,7 +15,7 @@ layout: default
     </div>
 </header>
 
-<!-- Main Content -->
+<!-- Main Content
 <div class="container">
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -24,5 +23,6 @@ layout: default
         </div>
     </div>
 </div>
-
+-->
+{{ content }}
 <hr>
