--- a/css/creative.css
+++ b/css/creative.css
@@ -22,7 +22,7 @@ a {
 }
 a:hover,
 a:focus {
-  color: #7c196b;
+  color: #eb3812;
 }
 h1,
 h2,
@@ -72,7 +72,7 @@ aside {
 }
 .navbar-default .navbar-header .navbar-brand:hover,
 .navbar-default .navbar-header .navbar-brand:focus {
-  color: #7c196b;
+  color: #eb3812;
 }
 .navbar-default .nav > li > a,
 .navbar-default .nav > li > a:focus {
@@ -124,7 +124,7 @@ aside {
   }
   .navbar-default.affix .navbar-header .navbar-brand:hover,
   .navbar-default.affix .navbar-header .navbar-brand:focus {
-    color: #7c196b;
+    color: #eb3812;
   }
   .navbar-default.affix .nav > li > a,
   .navbar-default.affix .nav > li > a:focus {
@@ -144,7 +144,7 @@ header {
   background-size: cover;
   -o-background-size: cover;
   background-position: center;
-  background-image: url('../img/header.jpg');
+  background-image: url('../img/map_clusters_hi_caption.jpg');
   text-align: center;
   color: white;
 }
@@ -153,6 +153,7 @@ header .header-content {
   text-align: center;
   padding: 100px 15px 100px;
   width: 100%;
+  overflow: auto;
 }
 header .header-content .header-content-inner h1 {
   font-weight: 700;
@@ -198,6 +199,7 @@ header .header-content .header-content-inner p {
 }
 .partners-box {
   max-width: 400px;
+  text-align: center;
   margin: 50px auto 0;
 }
 @media (min-width: 992px) {
@@ -207,6 +209,20 @@ header .header-content .header-content-inner p {
 }
 .partners-box p {
   margin-bottom: 0;
+}
+.partners-box img {
+  height: 200px;
+}
+.funding-box {
+  margin: 50px auto 0;
+  text-align: center;
+  max-width: 400px;
+}
+.funding-box p {
+  margin-bottom: 0;
+}
+.funding-box img {
+  width: 300px;
 }
 .portfolio-box {
   position: relative;
@@ -218,7 +234,7 @@ header .header-content .header-content-inner p {
   color: white;
   opacity: 0;
   display: block;
-  background: rgba(166, 34, 143, 0.9);
+  background: rgba(240, 95, 64, 0.9);
   position: absolute;
   bottom: 0;
   text-align: center;
@@ -284,8 +300,8 @@ header .header-content .header-content-inner p {
 .btn-default.active,
 .open > .dropdown-toggle.btn-default {
   color: #222222;
-  background-color: #f2f2f2;
-  border-color: #ededed;
+  background-color: #911e7d;
+  border-color: #881c75;
 }
 .btn-default:active,
 .btn-default.active,
