--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <!-- footer -->
-<footer>
+<section id="contact">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -8,16 +8,16 @@
                 <p>Ready to explore a collaboration? Give us a call or send us an email and we will get back to you as soon as possible.</p>
             </div>
             <div class="col-lg-4 col-lg-offset-2 text-center">
-                <i class="fa fa-phone fa-3x wow bounceIn"></i>
+                <i class="fa fa-phone fa-3x"></i>
                 <p>123-456-6789</p>
             </div>
             <div class="col-lg-4 text-center">
-                <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                <i class="fa fa-envelope-o fa-3x" data-wow-delay=".1s"></i>
                 <p><a href="mailto:your-email@your-domain.com">learn@insightscanada.com</a></p>
             </div>
         </div>
    </div>
-</footer>
+</section>
 <!-- jQuery -->
 <script src="{{ "/js/jquery.js" | prepend: site.baseurl }}"></script>
 
@@ -27,7 +27,6 @@
 <!-- Plugin JavaScript -->
 <script src="{{ "/js/jquery.easing.min.js" | prepend: site.baseurl }}"></script>
 <script src="{{ "/js/jquery.fittext.js" | prepend: site.baseurl }}"></script>
-<script src="{{ "/js/wow.min.js" | prepend: site.baseurl }}"></script>
 
 <!-- Custom Theme JavaScript -->
 <script src="{{ "/js/creative.js" | prepend: site.baseurl }}"></script>
