--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,8 +15,11 @@
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="{{ "/css/animate.min.css" | prepend: site.baseurl }}" type="text/css">
 
-    <!-- Custom CSS -->
+    <!-- Creative CSS -->
     <link rel="stylesheet" href="{{ "/css/creative.css" | prepend: site.baseurl }}" type="text/css">
+    
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="{{ "/css/custom.css" | prepend: site.baseurl }}" type="text/css">
 
     <!-- Custom Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
