--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 ---
+
+{% include nav.html %}
+
 <header>
     <div class="header-content">
         <div class="header-content-inner">
