--- a/_layouts/success.html
+++ b/_layouts/success.html
@@ -1,21 +1,61 @@
 ---
 layout: default
 ---
+
+<nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand page-scroll" href="{{ site.baseurl }}/">{{ site.title }}</a>
+        </div>
+
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                {% for post in site.categories.success %}
+                <li>
+                <a class="page-scroll" href="#{{ post.shorttitle }}">{{ post.shorttitle }}</a>
+                </li>
+                {% endfor %}
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+</nav>
+
 <header>
     <div class="header-content">
         <div class="header-content-inner">
             <h1>Insights Canada</h1>
             <hr>
-            {% for post in site.categories.success %}
-            <ul>
-                <li>
-                <a class="page-scroll" href="#{{ post.shorttitle }}">{{ post.title }}</a></li>
-            </ul>
-            {% endfor %}
+            <p>The case studies below indicate some of the successfuly
+            collaborations coordinated by insights Canada. The collaborations
+            short term high-impact sprints as well as long term in depth
+            collaborations</p>
 
+            <div class="col-sm-4 col-sm-offset-4">
+                <div class="sidebar-nav">
+                    <div class="navbar navbar-default" role="navigation"> 
+                        <div class="navbar-collapse collapse sidebar-navbar-collapse">
+                            <ul class="nav navbar-nav">
+                                {% for post in site.categories.success %}
+                                <li><a class="page-scroll" href="#{{ post.shorttitle }}">{{ post.shorttitle }}</a></li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </header>
 
 {{ content }}
 <hr>
+<!-- Navigation -->
