--- a/css/custom.css
+++ b/css/custom.css
@@ -1,25 +1,14 @@
-.sidebar-nav .navbar-default {
-  display: none;
-}
-@media (min-width: 768px) {
-  .sidebar-nav .navbar-default {
-    display: block;
-  }
-  .sidebar-nav .navbar .navbar-collapse {
-    padding: 0;
-    max-height: none;
-  }
-  .sidebar-nav .navbar ul {
-    float: none;
-    display: block;
-  }
-  .sidebar-nav .navbar li {
-    float: none;
-    display: block;
-  }
-  .sidebar-nav .navbar li a {
-    padding-top: 12px;
-    padding-bottom: 12px;
-  }
+@media (min-width: 768px)
+.navbar-default {
+    background-color: black;
 }
 
+.bg-primary.odd {
+    background-color: white;
+    color: black;
+}
+
+aside.bg-primary.odd {
+    background-color: black;
+    color: #a6228f;
+}
